Axel Nennker: changes due to suggestions from http://findbugs.sourceforge.net/